@@ -1,4 +1,4 @@
-VERSION=3.00.01
+VERSION=3.00.02
 
 YEARS=2005-2012
 
