@@ -95,7 +95,7 @@ class ConfigFile: public CFEnums__
         const_iterator begin() const;
         const_iterator end() const;
 
-        const_RE_iterator beginRE(std::string const &re);   // deprecated
+        const_RE_iterator beginRE(std::string const &re);   // 2, deprecated
         const_RE_iterator endRE() const;                    // deprecated
 
         RE_iteratorPair beginEndRE(std::string const &re);
