@@ -1,3 +1,15 @@
+bobcat (3.00.02)
+
+  * Cosmetic split of configile/beginre.cc into two sources, one holding the
+    deprecated ConfigFile::begin, the other one holding ConfigFile__::begin. 
+
+  * NOTE: Due to header file cleanups, sources previously compiled using
+    Bobcat < 3.00.00 may now require an explicit inclusion of bobcat/errno.
+    Simply add #include <bobcat/errno> to sources generating compiler errors
+    about missing Errno symbols.
+
+
+
 bobcat (3.00.01)
 
   * Re-added deprecated classes and members that were removed in 3.00.00
